force-app/main/default/objects/Recurrence_Rule__c/Recurrence_Rule__c.object-meta.xml
<CustomObject>
    <description>Order recurring rule</description>
    <label>Recurrence Rule</label>
    <nameField>
        <label>Recurrence Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurrence Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>