force-app/main/default/objects/Recurrence_Rule__c/fields/Days_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Month__c</fullName>
    <label>Days of Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>