force-app/main/default/objects/Recurrence_Rule__c/fields/End_After_Occurences__c.field-meta.xml
<CustomField>
    <fullName>End_After_Occurences__c</fullName>
    <label>End After Occurences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>