force-app/main/default/objects/Recurrence_Rule__c/fields/Ends_Mode__c.field-meta.xml
<CustomField>
    <fullName>Ends_Mode__c</fullName>
    <label>Ends Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>On Date</fullName>
            </value>
            <value>
                <fullName>After X Occurences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>