force-app/main/default/objects/Recurrence_Rule__c/fields/Last_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Date__c</fullName>
    <label>Last Processed Date</label>
    <type>Date</type>
</CustomField>