force-app/main/default/objects/Recurrence_Rule__c/fields/Max_Instances_Created__c.field-meta.xml
<CustomField>
    <fullName>Max_Instances_Created__c</fullName>
    <label>Max Instances Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>