force-app/main/default/objects/Recurrence_Rule__c/fields/Repeat_Every__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Every__c</fullName>
    <label>Repeat Every</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>